<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nickname_input_box"
        android:layout_width="550dp"
        android:layout_height="60dp"
        android:background="@drawable/text_box_background"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:hint="@string/hint_login_nickname"
        android:textColorHint="@color/grey_light_darker"
        android:textCursorDrawable="@drawable/text_cursor_color" />

    <EditText
        android:id="@+id/password_input_box"
        android:layout_width="550dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_box_background"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:hint="@string/hint_login_password"
        android:textColorHint="@color/grey_light_darker"
        android:textCursorDrawable="@drawable/text_cursor_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/login_affirmative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_create_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/create_new_user_button"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>