<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/user_params_avatar_preview_box"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:id="@+id/user_params_avatar_clickable_box"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"
            android:alpha="0.6"
            android:background="@drawable/focus_image" />

        <LinearLayout
            android:id="@+id/user_params_name_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_params_avatar_preview_box"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/title_user_params_name"
                android:textAlignment="center"
                android:textColor="@color/colorTextSplash"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/user_params_name_input_box"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/text_box_background"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:hint="@string/hint_user_params_name"
                android:textColorHint="@color/grey_light_darker"
                android:textCursorDrawable="@drawable/text_cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_params_surname_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/user_params_avatar_preview_box"
            android:layout_below="@id/user_params_name_input_container"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/title_user_params_surname"
                android:textAlignment="center"
                android:textColor="@color/colorTextSplash"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/user_params_surname_input_box"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/text_box_background"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:hint="@string/hint_user_params_surname"
                android:textColorHint="@color/grey_light_darker"
                android:textCursorDrawable="@drawable/text_cursor_color" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/colorTextSplash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/user_params_sections_divider"
            android:textAlignment="center"
            android:textColor="@color/colorTextSplash"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/colorTextSplash" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_params_nickname_input_container"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/title_user_params_nickname"
            android:textAlignment="center"
            android:textColor="@color/colorTextSplash"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/user_params_nickname_input_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_box_background"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:hint="@string/hint_user_params_nickname"
            android:textColorHint="@color/grey_light_darker"
            android:textCursorDrawable="@drawable/text_cursor_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_params_password_input_container"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/title_user_params_password"
            android:textAlignment="center"
            android:textColor="@color/colorTextSplash"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/user_params_password_input_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/text_box_background"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:hint="@string/hint_user_params_password"
            android:textColorHint="@color/grey_light_darker"
            android:textCursorDrawable="@drawable/text_cursor_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/user_params_affirmative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:id="@+id/user_params_affirmative_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_params_dismiss_layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/cancel_button"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>